[tool.poetry]
name = "llm-toolkit"
version = "0.1.0"
description = "A simple library to check LLMs internals"
authors = ["Ismaël Rousseau <ismael.rousseau@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Viagounet/LLM-Toolkit"
repository = "https://github.com/Viagounet/LLM-Toolkit"
keywords = ["LLM", "embeddings", "probing"]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]
mypy = "^1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"